Require JDK 17.0.3 to run Trino