@@ -1,7 +1,6 @@
 -server
--Xmx1G
--XX:-UseBiasedLocking
--XX:+UseG1GC
+-XX:InitialRAMPercentage=80
+-XX:MaxRAMPercentage=80
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
